--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img src="./imagenes/dragon.png" alt="" id="logo">
             Hyperblog <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
@@ -20,6 +21,9 @@
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.
             </p>
             <p>Suscribete y dale like</p>
+        </div>
+        <div id="footer">
+            Hecho con amor en Platzi ❤
         </div>
     </div>
 </body>
